spring-boot-server/src/main/java/com/example/spring_boot_server/domain/errors/GeneralError.java
package com.example.spring_boot_server.domain.errors;

import org.springframework.http.HttpStatus;

public class GeneralError extends BaseError {
    public GeneralError(String message) {
        super(HttpStatus.BAD_REQUEST, message);
    }
}